// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentHeading component should follow custom level on section 1`] = `
<section>
  <section>
    <h4>
      Heading level 4
    </h4>
  </section>
</section>
`;

exports[`DocumentHeading component should ignore section if level prop is a number 1`] = `
<section>
  <section>
    <h4>
      Heading level 4
    </h4>
  </section>
</section>
`;

exports[`DocumentHeading component should not allow heading bigger than 6 1`] = `
<h6>
  Heading level 6
</h6>
`;

exports[`DocumentHeading component should not allow heading lower than 1 1`] = `
<h1>
  Heading level 1
</h1>
`;

exports[`DocumentHeading component should not allow section bigger than 6 1`] = `
<section>
  <section>
    <h6>
      Heading level 6
    </h6>
  </section>
</section>
`;

exports[`DocumentHeading component should not allow section lower than 1 1`] = `
<section>
  <section>
    <h1>
      Heading level 1
    </h1>
  </section>
</section>
`;

exports[`DocumentHeading component should render inside of a section 1`] = `
<section>
  <h1>
    Heading level 1
  </h1>
</section>
`;

exports[`DocumentHeading component should render inside of nested sections 1`] = `
<section>
  <section>
    <h2>
      Heading level 2
    </h2>
  </section>
</section>
`;

exports[`DocumentHeading component should render properly 1`] = `<h1 />`;

exports[`DocumentHeading component should render relative levels 1`] = `
<section>
  <h1>
    Heading level 1
  </h1>
   
  <section>
    <h1>
      Heading level 2-1=1
    </h1>
     
    <h4>
      Heading level 2+2=4
    </h4>
     
    <section>
      <h2>
        Heading level 3-1=2
      </h2>
    </section>
  </section>
</section>
`;

exports[`DocumentHeading component should render relative levels of sections 1`] = `
<section>
  <h1>
    Heading level 1
  </h1>
   
  <section>
    <h3>
      Heading level 1+2=3
    </h3>
     
    <h5>
      Heading level 1+2+2=5
    </h5>
     
    <section>
      <h4>
        Heading level 1+2+1=4
      </h4>
    </section>
  </section>
</section>
`;

exports[`DocumentHeading component should render relative root heading 1`] = `
<h3>
  Heading level 1+2=3
</h3>
`;

exports[`DocumentHeading component should render relative root sections 1`] = `
<section>
  <h3>
    Heading level 1+2=3
  </h3>
</section>
`;

exports[`DocumentHeading component should render the given slot 1`] = `
<h1>
  <span>
    Random heading text
  </span>
</h1>
`;

exports[`DocumentHeading component should render with given level prop 1`] = `<h3 />`;
